lab1/Test/L1-A-12-35.output
Error Type B at Line 1
Error Type A at Line 6
Error Type A at Line 7
Error Type B at Line 11
Error Type A at Line 12
Error Type B at Line 17
Error Type A at Line 18
Error Type B at Line 20
Error Type B at Line 29
