lab1/Test/L1-A-12-35.cmm
wda537KUgHztjhhf [ 1531088771 ] , xidBFpQtcO51mhhWB7 

;
struct c5lJuKtwMtGTPeaL XiPZppvY6D3T ( ) {
}
int c ( int YvFZyrq1iIR ~) {
  c \;
  if ( zPerNzCpgzk1x6Die )   JhqInGUiyFA0Go ;
else   ahQGFjqoUqwcV6LWC6 ;

  if ( BZU0o   return eM0RfkWwIzY ;
else   if ( d4YubbxvSW_DCBzjAm_ `)   if ( bwKMAlOnTK2Wic 
    )   mj2tbviQpNjAfianf ;



  while HYOzad5J ) {
#  }
}
struct KM_rXgKe9hdmcq };
int IOv6IVPSdq7Y9T 
;
struct {
  struct X_NW cBP2szGXaj4JtZL , GuIQHdIiYaM9YoYd = 
    GOPBeWmbLEzzS5wwuWy = URlfBgQ == drQrQPz6 + sgX1N6LJOt3p 
    * - ! ( Ih2A7PyXtdgnTw = lloWwo = V9n22Z4fk1HTTW || 
    fxWGsVkrObENq3SL && gKgMmI720dhlFD < _EUx79feSBwsrWuLCD 
    - U [ Fnf9T0d = FkvmO >= m9r_3x7vw9wWLhwL * Dasw4WqpdJ3qpk 
    ( SXeHDcS , - N23SxTKea3trvh4mf0 [ <= ( jFCzqfz45waSF2p964zn 
    && fF > cfqWx ) ] * 1083669065 != LtRPPmIAOrZGe / 
    1651257402.1723340662 ) / wCOxn57HKcoa2_FVaLCM ( ) 
    ] ) . oh7dpQfoZOj_7 ;
  int idpK ;
};
float ;
int ;
int ZCfpe3Rmd2 ( int VVOfJlMGoEcZBQ , int _ga ) {
}
